# cmd/authenticator/handlers/routes.go
@@ -12,28 +12,20 @@ import (
 	"github.com/mitchellh/mapstructure"
 	"golang.org/x/exp/slices"
 
-	"github.com/ViniciusMiana/sensor-metadata/cmd/sensor/service"
+	"github.com/ViniciusMiana/sensor-metadata/cmd/authenticator/service"
 	"github.com/gorilla/mux"
 )
 
 type Application struct {
 	errorLog   *log.Logger
 	infoLog    *log.Logger
-	sensors    service.SensorMetadataService
+	service    service.AuthenticatorService
 	jwtPubKey  []byte
-	ParseToken func(token string, pubKey []byte) (*TokenClaims, error)
+	ParseToken func(token string, pubKey []byte) (*service.TokenClaims, error)
 }
 
 func (app Application) ErrorLog() *log.Logger {
 	return app.errorLog
-}
-
-// TODO move to a common pkg folder
-// TokenClaims contains a basic jwt claim structure
-type TokenClaims struct {
-	UserName string `json:"username"`
-	Role     string `json:"role"`
-	jwt.StandardClaims
 }
 
 func NewApplication(uri, databaseName string) (*Application, error) {
@@ -41,14 +33,14 @@ func NewApplication(uri, databaseName string) (*Application, error) {
 	infoLog := log.New(os.Stdout, "INFO\t", log.Ldate|log.Ltime)
 	errLog := log.New(os.Stderr, "ERROR\t", log.Ldate|log.Ltime|log.Lshortfile)
 	infoLog.Println("Starting application")
-	srv, err := service.NewSensorMetadataService(uri, databaseName)
+	srv, err := service.NewAuthenticatorService(uri, databaseName)
 	if err != nil {
 		return nil, err
 	}
 	return &Application{
 		errorLog:   errLog,
 		infoLog:    infoLog,
-		sensors:    srv,
+		service:    srv,
 		jwtPubKey:  []byte(os.Getenv("tls.crt")),
 		ParseToken: ParseJWTToken,
 	}, nil
@@ -84,7 +76,7 @@ func (app *Application) requireAuthentication(fn http.HandlerFunc, allowedRoles 
 	}
 }
 
-func ParseJWTToken(token string, pubKey []byte) (*TokenClaims, error) {
+func ParseJWTToken(token string, pubKey []byte) (*service.TokenClaims, error) {
 	jwtToken, err := jwt.Parse(token, func(tk *jwt.Token) (interface{}, error) {
 		a, err := jwt.ParseRSAPublicKeyFromPEM(pubKey)
 		return a, err
@@ -93,7 +85,7 @@ func ParseJWTToken(token string, pubKey []byte) (*TokenClaims, error) {
 		return nil, err
 	}
 	if jwtToken.Valid {
-		var tokenClaims *TokenClaims
+		var tokenClaims *service.TokenClaims
 		err = mapstructure.Decode(jwtToken.Claims, &tokenClaims)
 		if err != nil {
 			return nil, fmt.Errorf("could not parse token claims: %v", err)
@@ -106,12 +98,7 @@ func ParseJWTToken(token string, pubKey []byte) (*TokenClaims, error) {
 func (app *Application) Routes() *mux.Router {
 	// Register handler functions.
 	r := mux.NewRouter()
-	r.HandleFunc("/nearest/{lat}/{lon}", app.findNearest).Methods(http.MethodGet)
-	r.HandleFunc("/{id}", app.findByID).Methods(http.MethodGet)
-	r.HandleFunc("/", app.requireAuthentication(app.insert, []string{"ADMIN"})).Methods(http.MethodPost)
-	r.HandleFunc("/{id}", app.requireAuthentication(app.delete, []string{"ADMIN"})).Methods(http.MethodDelete)
-	r.HandleFunc("/{id}", app.requireAuthentication(app.update, []string{"ADMIN"})).Methods(http.MethodPut)
-	r.HandleFunc("/by-name/{name}", app.findByName).Methods(http.MethodGet)
-
+	r.HandleFunc("/login", app.login).Methods(http.MethodPost)
+	r.HandleFunc("/register", app.requireAuthentication(app.register, []string{"ADMIN"})).Methods(http.MethodPost)
 	return r
 }
